# manual-support-app

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml  railway.toml  requirements.txt  test_app.py
static/css/: style.css
templates/: index.html  manual_detail.html
