[project]
name = "manual-support"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.12",
    "cryptography>=45.0.4",
    "flask>=3.1.1",
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langchain-openai>=0.3.23",
    "openai>=1.86.0",
    "pypdf>=5.6.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "tiktoken>=0.9.0",
]
